--- a/FrameworkAnaliticaVisual/FrameworkAnaliticaVisual.csproj
+++ b/FrameworkAnaliticaVisual/FrameworkAnaliticaVisual.csproj
@@ -88,10 +88,17 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Contact.aspx" />
+    <Content Include="css\bootstrap-theme.css" />
+    <Content Include="css\bootstrap-theme.min.css" />
+    <Content Include="css\bootstrap.css" />
+    <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\Site.css" />
     <Content Include="DBSelection.aspx" />
     <None Include="packages.config" />
     <Content Include="CanvasView.aspx" />
     <Content Include="css\styles.css" />
+    <Content Include="ExView.aspx" />
     <Content Include="StandardForm.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -118,6 +125,20 @@
     </Compile>
     <Compile Include="CanvasView.aspx.designer.cs">
       <DependentUpon>CanvasView.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Contact.aspx.cs">
+      <DependentUpon>Contact.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Contact.aspx.designer.cs">
+      <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ExView.aspx.cs">
+      <DependentUpon>ExView.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ExView.aspx.designer.cs">
+      <DependentUpon>ExView.aspx</DependentUpon>
     </Compile>
     <Compile Include="Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
